force-app/main/default/objects/Football_Club__c/Football_Club__c.object-meta.xml
<CustomObject>
    <label>Football Club</label>
    <nameField>
        <label>Football Club Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Football Clubs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>