force-app/main/default/objects/Football_Club__c/fields/Foundation__c.field-meta.xml
<CustomField>
    <fullName>Foundation__c</fullName>
    <label>Foundation</label>
    <required>true</required>
    <type>Date</type>
</CustomField>