force-app/main/default/objects/Football_Club__c/fields/President__c.field-meta.xml
<CustomField>
    <fullName>President__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>President</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Football_Clubs</relationshipName>
    <type>Lookup</type>
</CustomField>